maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:18: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:25: error: Unmatched closing brace '}' ignored here
}
^